--- a/PTsix/src/main/resources/jdbc.properties
+++ b/PTsix/src/main/resources/jdbc.properties
@@ -1,4 +1,8 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://47.74.176.87:3306/booksystem?useUnicode=true&characterEncoding=utf8
+
+jdbc.url=jdbc:mysql://localhost:3306/ykat?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=970604
+#jdbc.url=jdbc:mysql://47.74.176.87:3306/booksystem?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=123456
