--- a/PTsix/pom.xml
+++ b/PTsix/pom.xml
@@ -142,6 +142,7 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.5</version>
         </dependency>
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
@@ -159,6 +160,13 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.28</version>
+        </dependency>
+
+        <!-- google grava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
         </dependency>
     </dependencies>
     <build>
