--- a/PTsix/src/main/resources/jdbc.properties
+++ b/PTsix/src/main/resources/jdbc.properties
@@ -1,6 +1,10 @@
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/ykat?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=970604
+
+
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ykat?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/YKAT?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=970604
-
-
+jdbc.password=hyx
