--- a/PTsix/src/main/webapp/WEB-INF/web.xml
+++ b/PTsix/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1" metadata-complete="true">
     <!-- 配置DispatcherServlet -->
+
     <servlet>
         <servlet-name>seckill-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -14,15 +15,23 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:spring/spring-*.xml</param-value>
         </init-param>
-
         <!-- 支持Options方法？ -->
         <init-param>
             <param-name>dispatchOptionsRequest</param-name>
             <param-value>true</param-value>
         </init-param>
-
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <filter>
+        <filter-name>cors</filter-name>
+        <filter-class>com.PT.tools.CORSFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>cors</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
