--- a/PTsix/pom.xml
+++ b/PTsix/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.yxhuang</groupId>
     <artifactId>PTsix</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
             <groupId>com.thetransactioncompany</groupId>
@@ -175,7 +176,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>BookSystem_V0</finalName>
+        <finalName>YKAT</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
