--- a/PTsix/pom.xml
+++ b/PTsix/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.yxhuang</groupId>
     <artifactId>PTsix</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <!--<packaging>war</packaging>-->
     <dependencies>
         <dependency>
             <groupId>com.thetransactioncompany</groupId>
