--- a/PTsix/pom.xml
+++ b/PTsix/pom.xml
@@ -176,7 +176,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>YKAT</finalName>
+        <finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
