--- a/PTsix/pom.xml
+++ b/PTsix/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.yxhuang</groupId>
     <artifactId>PTsix</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <!--<packaging>war</packaging>-->
     <dependencies>
